syntax = "proto3";

package greet;

// Define the greeting service
service Greeter {
  rpc SayHello (HelloRequest) returns (HelloReply);
  rpc SayGoodbye (GoodbyeRequest) returns (GoodbyeReply);
}

// Request message for SayHello
message HelloRequest {
  string name = 1;
  int32 age = 2;
}

// Response message for SayHello
message HelloReply {
  string message = 1;
  repeated string additionalMessages = 2;
}

// Request message for SayGoodbye
message GoodbyeRequest {
  string name = 1;
}

// Response message for SayGoodbye
message GoodbyeReply {
  string message = 1;
}
